@@ -1541,3 +1541,11 @@ executed query: { query:
         WHERE date_part('month'::text, hrd.creation_timestamp) = $1
       GROUP BY sales.product_id, prd.name, prd.description, (date_part('month'::text, hrd.creation_timestamp));
       , params: 8; duration: 182ms, rows: 2 }
+executed query: { query: SELECT * from products WHERE id = $1 and deleted_at IS NULL, params: 13; duration: 189ms, rows: 1 }
+executed query: { query: SELECT amount from stock where product_id = $1 and deleted_at IS NULL, params: 13; duration: 11ms, rows: 1 }
+executed query: { query: SELECT price from products WHERE id = $1 and deleted_at IS NULL, params: 13; duration: 1ms, rows: 1 }
+executed query: { query: UPDATE stock SET amount = $1 WHERE product_id = $2, params: 7,13; duration: 2ms, rows: 1 }
+executed query: { query: SELECT name, id, daystopay from payment_method, params: undefined; duration: 83ms, rows: 12 }
+executed query: { query: INSERT INTO sale_header(user_id, total, payment_method_id, creation_user, update_user, deadline) VALUES ($1, $2, $3, $4, $5, $6) RETURNING *, params: 1,150.47,8,1,1,Wed Aug 18 2021 23:30:04 GMT-0300 (Brasilia Standard Time); duration: 12ms, rows: 1 }
+executed query: { query: INSERT INTO bills_receive(user_id, sale_header_id, amount, method_id, deadline) VALUES($1, $2, $3, $4, $5) RETURNING *, params: 1,34,150.47,8,Wed Aug 18 2021 23:30:04 GMT-0300 (Brasilia Standard Time); duration: 6ms, rows: 1 }
+executed query: { query: INSERT INTO sale_items (sale_header_id, line, product_id, delivery_method, sold_amount, unitary_value, discount_value, plus_value, total) VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9) RETURNING *, params: 34,1,13,Courier,1,150.47,0,0,150.47; duration: 2ms, rows: 1 }
