@@ -60,3 +60,4 @@
     - Adicionado proteção contra DoS/DDoS
     - Adicionado rota de relatório de produtos vendidos em um mês específico
     - Adicionado rota de relatório do fluxo de caixa atual
+    - Adicionado erro caso ocorra erro em alguma query na parte de compra
